--- a/index.html
+++ b/index.html
@@ -103,5 +103,6 @@
     </div>
   </main>
   <script src="addjokers.js" defer></script>
+  <div class="footer-thanks">Special Thanks to Not Mario for the page layout</div>
 </body>
 </html>
