--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <div class="jokers">
       
     </div>
-    <div class="footer-thanks">Special Thanks to Not Mario for the page layout</div>
+    <h3>Special Thanks to Not Mario for the page layout</h3>
   </main>
   <script src="addjokers.js" defer></script>
 </body>
