--- a/index.html
+++ b/index.html
@@ -15,14 +15,13 @@
     // #define PIXEL_SIZE_FAC 700.
 
     // default colours
-    // #define colour_1 vec4(1.0, 0.0, 0.0, 1.0)
-    // #define colour_2 vec4(1.0, 0.6570588235, 0.0, 1.0)
-    // #define colour_3 vec4(0.2156862745, 0.2588235294, 0.2666666667, 1.0)
-
-    #define colour_1 vec4(1.0, 1.0, 0.0, 1.0)
-    #define colour_2 vec4(1.0, 0.5490196078, 0.0, 1.0)
-    #define colour_3 vec4(0.2156862745, 0.2588235294, 0.2666666667, 1.0)
-
+    // #define colour_1 vec4(1.0,0.3725490196,0.3333333333,1.0)
+    // #define colour_2 vec4(0.0,0.6156862745,1.0,1.0)
+    // #define colour_3 vec4(0.2156862745,0.2588235294,0.2666666667,1.0)
+    
+    #define colour_1 vec4(0.7392156863,0.2294117647,1.0,1.0)
+    #define colour_2 vec4(0.3960784314,0.5.0,1.0,1.0)
+    #define colour_3 vec4(0.2156862745,0.2588235294,0.2666666667,1.0)
 
     uniform vec2 iResolution;
     uniform float iTime;
