--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     // #define colour_2 vec4(0.0,0.6156862745,1.0,1.0)
     // #define colour_3 vec4(0.2156862745,0.2588235294,0.2666666667,1.0)
     
-    #define colour_1 vec4(0.5392156863,0.4294117647,1.0,1.0)
-    #define colour_2 vec4(0.7960784314,0.0,1.0,1.0)
+    #define colour_1 vec4(0.2,0.6,0.4,1.0)
+    #define colour_2 vec4(0.8,0.2,1.0,1.0)
     #define colour_3 vec4(0.2156862745,0.2588235294,0.2666666667,1.0)
 
     uniform vec2 iResolution;
@@ -101,7 +101,7 @@
     <div class="jokers">
       
     </div>
-    <h3>Special Thanks to Not Mario for the page layout</h3>
+    <a href="https://github.com/notmario/balatrowebsitetemplate" id="download">Special Thanks to Not Mario for the page layout</a>
   </main>
   <script src="addjokers.js" defer></script>
 </body>
