--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <div class="jokers">
       
     </div>
-    <a href="https://github.com/notmario/balatrowebsitetemplate" id="download">Special Thanks to Not Mario for the page layout</a>
+    <a href="https://github.com/notmario/balatrowebsitetemplate" id="gettemp">layout by not mario</a>
   </main>
   <script src="addjokers.js" defer></script>
 </body>
