website is finally updated

--- a/index.html
+++ b/index.html
@@ -101,6 +101,13 @@
     <div class="jokers">
       
     </div>
+    <div class="consumableshidebydefault">
+      <h2>consumables</h2>
+      <br>
+      <div class="consumables">
+        
+      </div>
+    </div>
     <a href="https://github.com/notmario/balatrowebsitetemplate" id="gettemp">layout by not mario</a>
   </main>
   <script src="addjokers.js" defer></script>
