--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <h1>Jank Jonklers</h1>
     <p>
       A Balatro mod for Steamodded <br/>
-      Totalling up to 22 Jokers and more to come!
+      Totalling over 30 Jokers and more to come!
     </p>
     <br>
     <h2>download link</h2>
